--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,11 +20,11 @@
     <section id="images">
       <h2>Imagens Relacionadas</h2>
       <div class="image">
-        <img src="images/floresta.jpg" alt="Floresta">
+        <img src="floresta.jpg" alt="Floresta">
         <p>Floresta tropical</p>
       </div>
       <div class="image">
-        <img src="images/iceberg.jpg" alt="Iceberg">
+        <img src="iceberg.jpg" alt="Iceberg">
         <p>Derretimento de iceberg devido ao aquecimento global</p>
       </div>
     </section>
