--- a/index.html
+++ b/index.html
@@ -17,16 +17,18 @@
       <p>Esse fenômeno tem impactos significativos no meio ambiente, incluindo o derretimento das calotas polares, elevação do nível do mar e mudanças nos padrões climáticos.</p>
       <p>É crucial tomar medidas para reduzir as emissões de gases do efeito estufa e mitigar os efeitos do aquecimento global.</p>
     </section>
-    <section id="images">
-      <h2>Imagens Relacionadas</h2>
-      <div class="image">
-        <img src="floresta.jpg" alt="Floresta">
-        <p>Floresta tropical</p>
-      </div>
-      <div class="image">
-        <img src="iceberg.jpg" alt="Iceberg">
-        <p>Derretimento de iceberg devido ao aquecimento global</p>
-      </div>
+      <section id="images">
+        <h2>Imagens Relacionadas</h2>
+        <div class="image">
+          <img src="florestas.jpg" alt="Floresta" class="zoomable">
+          <p>Floresta tropical</p>
+        </div>
+        <div class="image">
+          <img src="iceberg.jpg" alt="Iceberg" class="zoomable">
+          <p>Derretimento de iceberg devido ao aquecimento global</p>
+        </div>
+      </section>
+      
     </section>
     <button id="darkModeBtn">Ativar Modo Escuro</button>
   </main>
