--- a/index.html
+++ b/index.html
@@ -20,19 +20,22 @@
       <section id="images">
         <h2>Imagens Relacionadas</h2>
         <div class="image">
-          <img src="florestas.jpg" alt="Floresta" class="zoomable">
-          <p>Floresta tropical</p>
-        </div>
+            <img src="florestas.jpg" alt="Floresta">
+            <canvas id="chart1" width="200" height="100"></canvas>
+            <p>Floresta tropical</p>
+          </div>
         <div class="image">
           <img src="iceberg.jpg" alt="Iceberg" class="zoomable">
           <p>Derretimento de iceberg devido ao aquecimento global</p>
         </div>
       </section>
-      
+    
     </section>
     <button id="darkModeBtn">Ativar Modo Escuro</button>
   </main>
   <script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 </body>
 </html>
 
