--- a/index.html
+++ b/index.html
@@ -3,34 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mini Jogo - Quiz do Meio Ambiente</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <header>
-    <h1>Mini Jogo - Quiz do Meio Ambiente</h1>
-  </header>
-  <main>
-    <section id="quiz">
-       
-            <div id="questionContainer">
-              <h2 id="question"></h2>
-              <form id="quizForm">
-                <input type="radio" name="answer" value="greenhouse" id="greenhouse">
-                <label for="greenhouse">Emissão de gases de efeito estufa</label><br>
-                <input type="radio" name="answer" value="deforestation" id="deforestation">
-                <label for="deforestation">Desmatamento</label><br>
-                <input type="radio" name="answer" value="plastic" id="plastic">
-                <label for="plastic">Uso de plástico</label><br>
-                <input type="submit" value="Responder">
-              </form>
-            </div>
-            <div id="scoreContainer" style="display: none;">
-              <h2>Sua pontuação:</h2>
-              <p id="score"></p>
-            </div>
-          
-    </section>
+    <title>Jogo de Labirinto</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <header>
+      <h1>Jogo de Labirinto - Leve o Urso Polar até o Iceberg</h1>
+    </header>
+    <main>
+      <section id="game">
+        <!-- O tabuleiro do jogo será inserido aqui dinamicamente -->
+      </section>
+    </main>
+    <script src="script.js"></script>
         <section id="texto">
             <div class="container">
                 <h1>O Meio Ambiente e o Aquecimento Global: Desafios e Soluções</h1>
